# ke-youtube-playlist-watcher

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: check-playlist  install.sh
src/: analyzer.py  cli.py  config.py  memory.py  prompt.py  scanner.py
