[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ke-youtube-playlist-watcher"
version = "0.1.2"
description = "Watch a YouTube playlist, cache transcripts, and generate structured analyses."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "yt-dlp",
  "youtube-transcript-api",
]

[project.scripts]
ke-youtube-playlist-watcher = "cli:main"
ke-youtube-playlist-watcher-prompt = "prompt:main"

[tool.setuptools]
py-modules = ["analyzer", "cli", "config", "memory", "prompt", "scanner"]

[tool.setuptools.package-dir]
"" = "src"
